# sales-parsing

./: .env.ini  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
salesparcing/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/uploader/: form.html  list.html
uploader/: forms.py  models.py  parser.py  tests.py  urls.py  validators.py  views.py
uploader/migrations/: 0001_initial.py
