[tool.poetry]
name = "sales-parcing"
version = "0.1.0"
description = ""
authors = ["rafaelcnagy <rafaelnagy@hotmail.com>"]
readme = "README.md"
packages = [{include = "sales_parcing"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
